# panda_mti

./: .gitignore  .gitmodules  LICENSE  README.md
controller/: CMakeLists.txt  libfrankamodellibrary.so.0.5.0  package.xml
controller/config/: 901b0ed7ad12.yaml  901b0ed7ad2b.yaml  901b0ed7ad5f.yaml  901b0ed7ae05.yaml  901b0ed7ae8f.yaml  emulated.yaml  hardwareParam.yaml  simulated.yaml
controller/include/: controllerinterface.h  gripperbackground.h  netft_rdt_driver.h  pdcontroller.h  pdcontroller_gripper.h  pdcontroller_gripper_netft.h  pdcontroller_netft.h  statepublisher.h
controller/launch/: default.launch  publish_tfs.launch  slippy_pdcontroller.launch  test.launch  test_pdcontroller.launch  test_pdcontroller_altParams.launch  test_pdcontroller_gripper.launch  test_pdcontroller_gripper_netft.launch  test_pdcontroller_netft.launch  test_pdcontrolleremulator.launch  test_statepublisher.launch
controller/nodes/: controller2jointstatemsgspublisher.py  pdcontrolleremulationnode.py  tf_prefixer.py
controller/scripts/: getHardwareID.sh  hardware_param.py  publish_pdcontrollergoal.py
controller/src/: common.cpp  gripperbackground.cpp  netft.cpp  netft.h  netft_rdt_driver.cpp  pdcontroller.cpp  pdcontroller_gripper.cpp  pdcontroller_gripper_netft.cpp  pdcontroller_main.cpp  pdcontroller_netft.cpp  statepublisher.cpp
controller/urdf/: alternative_dyn_params.xacro  hand.xacro  panda_arm.xacro
endeffectors/: CMakeLists.txt  package.xml  setup.py
endeffectors/include/: gripper_controller.h  softhand_controller_mapper.h
endeffectors/launch/: test_gripper.launch
endeffectors/scripts/: mti_pdcontrollergoal_publisher.py
endeffectors/src/: main.cpp  softhand_controller_mapper.cpp
franka_description/: CMakeLists.txt  package.xml
franka_description/robots/: dual_panda_example.urdf.xacro  hand.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro
msgs/: CMakeLists.txt  package.xml
msgs/msg/: MechanicalStateDistribution8TorquePosVel.msg  PDControllerGoal8.msg  RobotModeMsg.msg  RobotState.msg
netft_utils/launch/: force_torque_pub.launch  netft_view.launch
netft_utils/src/: netft_node.cpp  netft_rdt_driver.cpp  netft_utils.cpp
panda_dynamics_model/: CMakeLists.txt  package.xml  setup.py
panda_dynamics_model/src/pandadynamicsmodel/: __init__.py  _pandadynamicsmodel.py
panda_dynamics_model/urdf/: alternative_dyn_params.xacro  panda_arm_alt_dyn.urdf.xacro  panda_arm_hand.urdf.xacro  panda_arm_hand_alt_dyn.urdf.xacro  panda_arm_plus_inertial.xacro
panda_friction/: CMakeLists.txt  package.xml
panda_friction/launch/: panda_friction.launch
panda_friction/scripts/: friction_torque_figure.py
panda_friction/src/: panda_friction.py
