<?xml version="1.0"?>
<package format="2">
  <name>mti_panda_gripper</name>
  <version>0.1.0</version>
  <description>mti_panda_gripper emulates a a joint-space PD controller for Franka Panda's gripper and the MTI/RBO Pneumatic-Softhand (using libfranka only)</description>

  <maintainer email="info@mti-engage.tu-berlin.de">MTI-engAge</maintainer>
  <license>Apache 2.0</license>

  <url type="website">mti-engage.tu-berlin.de</url>
  <url type="repository">mti-engage.tu-berlin.de</url>
  <url type="bugtracker">mti-engage.tu-berlin.de</url>
  <author>MTI</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>message_runtime</build_export_depend>


  <depend>panda_msgs_mti</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
  <depend>pluginlib</depend>
  <depend>rospy</depend>


</package>
