<?xml version="1.0"?>
<package format="2">
  <name>franka_description</name>
  <version>0.7.0-panda_mti0</version>
  <description>franka_description contains URDF files and meshes of Franka Emika robots</description>
  <maintainer email="raphael.deimel@tu-berlin.de">Raphael Deimel</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/raphaeldeimel/panda_mti</url>
  <author>Franka Emika GmbH</author>
  <author>Raphael Deimel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
</package>
